workspace_S32K144_TouchSense_SDK/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
23:57:22 **** Incremental Build of configuration Debug for project S32K144_TS40_SDK ****
make -j4 all 
Building file: ../Sources/ets.c
Executing target #45 ../Sources/ets.c
Building file: ../Sources/main.c
Invoking: Standard S32DS C Compiler
Executing target #47 ../Sources/main.c
arm-none-eabi-gcc "@Sources/ets.args" -MMD -MP -MF"Sources/ets.d" -MT"Sources/ets.o" -o "Sources/ets.o" "../Sources/ets.c"
Building file: ../Sources/slider.c
Invoking: Standard S32DS C Compiler
Executing target #49 ../Sources/slider.c
../Sources/ets.c: In function 'ElectrodeSelfTrimSense':
../Sources/ets.c:744:3: warning: implicit declaration of function 'LPTMR_DRV_SetCompareValueByCount' [-Wimplicit-function-declaration]
   LPTMR_DRV_SetCompareValueByCount(INST_LPTMR1,LPTMR_ELEC_SENSE);
   ^
../Sources/ets.c:744:36: error: 'INST_LPTMR1' undeclared (first use in this function)
   LPTMR_DRV_SetCompareValueByCount(INST_LPTMR1,LPTMR_ELEC_SENSE);
                                    ^
../Sources/ets.c:744:36: note: each undeclared identifier is reported only once for each function it appears in
arm-none-eabi-gcc "@Sources/main.args" -MMD -MP -MF"Sources/main.d" -MT"Sources/main.o" -o "Sources/main.o" "../Sources/main.c"
make: *** [Sources/subdir.mk:63: Sources/ets.o] Error 1
make: *** Waiting for unfinished jobs....
Invoking: Standard S32DS C Compiler
arm-none-eabi-gcc "@Sources/slider.args" -MMD -MP -MF"Sources/slider.d" -MT"Sources/slider.o" -o "Sources/slider.o" "../Sources/slider.c"
../Sources/main.c: In function 'main':
../Sources/main.c:469:48: error: 'LPTMR_ELEC_CAL' undeclared (first use in this function)
  LPTMR_DRV_SetCompareValueByCount(INST_LPTMR1, LPTMR_ELEC_CAL);
                                                ^
../Sources/main.c:469:48: note: each undeclared identifier is reported only once for each function it appears in
../Sources/main.c:570:3: error: expected declaration or statement at end of input
   return exit_code;
   ^
make: *** [Sources/subdir.mk:79: Sources/main.o] Error 1
../Sources/slider.c: In function 'SliderElectrodeSelfTrimSense':
../Sources/slider.c:437:3: warning: implicit declaration of function 'LPTMR_DRV_SetCompareValueByCount' [-Wimplicit-function-declaration]
   LPTMR_DRV_SetCompareValueByCount(INST_LPTMR1, LPTMR_ELEC_SENSE);
   ^
../Sources/slider.c:437:36: error: 'INST_LPTMR1' undeclared (first use in this function)
   LPTMR_DRV_SetCompareValueByCount(INST_LPTMR1, LPTMR_ELEC_SENSE);
                                    ^
../Sources/slider.c:437:36: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Sources/subdir.mk:95: Sources/slider.o] Error 1
